--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-camera-roll/camera-roll": "^7.9.0",
+    "@react-native-ml-kit/face-detection": "^1.3.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-svg": "^15.9.0",
     "react-native-vision-camera": "^4.6.3",
+    "react-native-webview": "^13.12.4",
     "react-native-worklets-core": "^1.5.0"
   },
   "devDependencies": {
