--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@react-native-camera-roll/camera-roll": "^7.9.0",
     "@react-native-ml-kit/face-detection": "^1.3.2",
+    "@shopify/react-native-skia": "^1.6.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-svg": "^15.9.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
+    "react-native-vision-camera-face-detector": "^1.7.2",
     "react-native-webview": "^13.12.4",
     "react-native-worklets-core": "^1.5.0"
   },
